--- a/stevens-college/styles.css
+++ b/stevens-college/styles.css
@@ -1,1 +1,50 @@
-/* Add your CSS here */
+html {
+    height: 100%;
+    width: 100%;
+    font-family: sans-serif, serif, monospace;
+}
+
+h1 {
+    text-align: center;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+ul {
+    list-style: none;
+    margin-left: 31%;
+    position: relative;
+}
+
+li a {
+    text-decoration: none;
+    color: whitesmoke;
+}
+
+li a:hover {
+    color: white;
+}
+
+li a:active {
+    color: black;
+}
+
+li {
+    font-size: 19px;
+    display: inline-flex;
+    padding: 1em;
+    margin-left: 2em;
+    background-color: maroon;
+    border: 2px solid black;
+}
+
+p {
+    font-size: 19px;
+    margin: 1.2em;
+
+}
